commit code for elastic search

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,7 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    # Elastic Search
+    item_search_index_name: blog
+    elasticsearch_hosts: ['localhost:9200']
